--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
+    "@types/uuid": "^8.3.0",
     "deox": "^3.3.1",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
@@ -32,8 +33,10 @@
     "react-dom": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-random-values": "^1.5.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-swipe-list-view": "^3.2.5",
     "react-native-tags": "^2.2.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
@@ -42,7 +45,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
